# gha-cache-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yaml  gha-cache-server-1.0.0.tgz  index.yaml  rust-guidelines.txt
.github/workflows/: clippy.yml  container.yml  debian.yml  format.yml  helm.yml  release.yml  rpm.yml  test.yml
.sqlx/: query-2fa489f661990d9f9372cd03ec5f75f3a9d2e45269db3240f16f061b3ecb1510.json  query-528cd01aeb486e5c900ec5ef25d6805156d5e69f226c421fe357cfd52143a6e9.json  query-54a87fe3a5ca036859dd550aacb6095078e1d00fe73259196d90716273267dff.json  query-7cee2483d909477bbe437d55ded11b1afcf27ced934f721427be37074031e74d.json  query-9c6950127e198a378c1b58372b4937afba6b54f8cdd0dc31dc7c5d31dfcc2412.json  query-a52ce1a86bb4741b1dff995889162ededc357b388d0cb3ffca9352d5b1034840.json  query-e5fe05f2dea427604bee2a17180fb69938c3b5555a640a9d3d436fa448f2c285.json  query-e845fff36804426bc8441c2264d5c19ec894a3aa3704bba3a609cc205d9f3f3c.json
deploy/: cosign.pub  signing-key.pub
deploy/charts/gha-cache-server/: Chart.yaml  README.md  values.yaml
deploy/charts/gha-cache-server/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  migration-job.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: cache-protocol.md  configuration.md  container-image.md  releasing.md
migrations/: 20250920_000001_init.sql
migrations/mysql/: 20250920_000001_init.sql  20250921_000001_add_cache_version.sql  20250922_000001_add_upload_parts.sql  20250923_000001_add_finalize_tracking.sql  20251105_000001_add_cache_entry_ids.sql
migrations/postgres/: 20250920_000001_init.sql  20250921_000001_add_cache_version.sql  20250922_000001_add_upload_parts.sql  20250923_000001_add_finalize_tracking.sql  20251105_000001_add_cache_entry_ids.sql
migrations/sqlite/: 20250920_000001_init.sql  20250921_000001_add_cache_version.sql  20250922_000001_add_upload_parts.sql  20250923_000001_add_finalize_tracking.sql  20251105_000001_add_cache_entry_ids.sql
packaging/arch/: PKGBUILD  gha-cache-server.sysusers  gha-cache-server.tmpfiles
packaging/config/: env
packaging/debian/: changelog  control  gha-cache-server.service  postinst  prerm  rules
packaging/rpm/: README  gha-cache-server.service  gha-cache-server.spec  gha-cache-server.tmpfiles
proto/: cache.proto
src/: cleanup.rs  config.rs  db.rs  error.rs  http.rs  lib.rs  main.rs  obs.rs  test_support.rs
src/api/: download.rs  mod.rs  path.rs  proto.rs  proxy.rs  twirp.rs  types.rs  upload.rs  upload_compat.rs
src/jobs/: finalize.rs
src/meta/: mod.rs
src/storage/: fs.rs  gcs.rs  mod.rs  s3.rs
tests/: cleanup.rs  fs_store.rs  last_access.rs  meta_queries.rs  opendal_compat.rs
