[package]
name = "gha-cache-server"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
hyper = { version = "1", features = ["http1", "server"] }
http = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["timeout", "limit"] }
bytes = "1"
base64 = "0.22"
url = "2"


# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }


# S3 / MinIO
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
futures = "0.3.31"


[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
